# Personal-AI-Assistant

./: CLAUDE.md  README.md  a  deps.py  main.py  prompt.md  pyproject.toml  technical-architecture.md
api/: router.py
api/schemas/: __init__.py  chat.py  knowledge.py  session.py  sop.py  wechat.py
api/v1/: chat.py  knowledge.py  session.py  sop.py  wechat.py
background/: incremental_update.py  scheduler.py  watcher.py  wechat_sync.py
config/: settings.py
core/: agent_factory.py  agno_db.py  model_factory.py  prompt_templates.py  security.py  session_service.py
db/: app_meta.py
db/migrations/: 001_app_meta.sql  002_wechat_search.sql
knowledge/: base.py  loader.py  reader_factory.py  service.py  tracker_repository.py
reports/: daily_report.py
scripts/: build_wechat_search_db.py  init_app_meta.py  rebuild_knowledge.py  seed_knowledge.py
sop/: manager.py  models.py  tools.py
web/: README.md  app.js  index.html  styles.css
wechat/: search_store.py  tools.py
