[project]
name = "personal-assistant"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "agno[sql]",
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "openai",
  "lancedb",
  "docling",
  "chonkie",
  "watchdog",
  "apscheduler",
  "sse-starlette",
  "pypdf>=6.10.0",
  "python-docx>=1.2.0",
  "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
]
